fix cut off

--- a/style/css/style.sass
+++ b/style/css/style.sass
@@ -540,6 +540,7 @@ $quotation-hover-position: $quotation-fix-position + 1.5px
                 @extend %nice_transition
                 position: absolute
                 fill: #555
+                transform: rotate(0.001turn)
                 width: $quotation-size
                 height: $quotation-size
                 &:first-of-type
